--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+/* body {
+  background-color: black;
+
+}
+
+div {
+  background-color: black;
+}
+
+h1, h2, h3 {
+  color: #feb13b;
+}
+
+p{
+  color: #e9e9e9
+}
+
+.card {
+  
+} */
