--- a/client/src/index.css
+++ b/client/src/index.css
@@ -119,3 +119,39 @@ h4, p {
     transform:rotate(405deg);
   }
 }
+
+* The heart of the matter */
+.testimonial-group > .row {
+  overflow-x: auto;
+  white-space: nowrap;
+}
+.testimonial-group > .row > .col-xs-4 {
+  display: inline-block;
+  float: none;
+}
+
+/* Decorations */
+.col-xs-4 { color: #fff; font-size: 48px; padding-bottom: 20px; padding-top: 18px; }
+.col-xs-4:nth-child(3n+1) { background: #c69; }
+.col-xs-4:nth-child(3n+2) { background: #9c6; }
+.col-xs-4:nth-child(3n+3) { background: #69c; }
+
+
+#scroll {
+  /* height: 4px; */
+
+
+  display: flex;
+  overflow-x: auto;
+}
+#container {
+  display: inline-block;
+  padding: 10px;
+  border: 1px solid #feb13b;;
+  display:flex;
+  vertical-align:top;
+  margin-right:20px;
+  white-space:normal;
+  border-radius: 10px;
+  /* width: 20%; */
+}
