--- a/client/src/index.css
+++ b/client/src/index.css
@@ -155,3 +155,23 @@ h4, p {
 #select::-ms-expand {
   display: none;
 }
+
+
+#logo {
+  width: 10%;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#mush {
+  font-family: 'Abril Fatface', cursive;
+  text-align: center;
+
+}
+
+#home{
+
+}
+
