--- a/client/src/styles/CustomStyle.css
+++ b/client/src/styles/CustomStyle.css
@@ -13,6 +13,14 @@ a{
 }
 
 form {
-        margin-left: 25%;
+    margin-left: 25%;
     margin-right: 25%;
 }
+
+._244_WpsbxCKE_aQPsrcpn3._17s9sfRz_OhvsAxlINu-ba{
+    background-color: #feb13b;
+}
+
+/* div {
+    text-align: center
+} */
